fix(fonts/validate): optimize error notification for input validation on mobile screens
Changes summary:
    - Error notification for input validation is optimized for better user experience on mobile screens.

--- a/src/sass/gpthemes/theme-manager/components/_error-msg.scss
+++ b/src/sass/gpthemes/theme-manager/components/_error-msg.scss
@@ -1,12 +1,16 @@
 .gpth-error-msg {
-    // position: fixed;
-    // top: 1%;
-    // right: 2%;
-    // border-radius: var(--br-btn);
-    // top: calc(var(--h-header) + 0.5rem + 3rem);
     @extend %animFadeIn;
     top: 3rem;
     right: 4rem;
-    // z-index: var(--z-modal);
+    z-index: calc(var(--z-modal) - 4);
     backdrop-filter: blur(10px);
+    width: max-content;
+
+    @include dev(mob) {
+        top: 3rem;
+        right: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        max-width: 90%;
+    }
 }
